<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="36dp"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/accessLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <Button
            android:id="@+id/goods_list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/goods_list"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/goods_storage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/goods_storage"
            android:layout_marginTop="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/goods_query"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/goods_query"
            android:layout_marginTop="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/on_credit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/on_credit"
            android:layout_marginTop="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </LinearLayout>

</RelativeLayout>